<resources>
    <string name="app_name">Kotlin</string>
    <string name="instagram">Instagram</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_you_have_an_account">Don`t you have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home_activity">Home Activity</string>
</resources>